adjust schema image size

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "<center><h3>DATABASE SCHEMA</h3></center>\n",
     "\n",
-    "![schema](db_schema.png)"
+    "<img src=\"db_schema.png\" width=500 height=500>"
    ]
   },
   {
