adding student code cells

--- a/index.ipynb
+++ b/index.ipynb
@@ -309,6 +309,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 128,
    "metadata": {
     "ExecuteTime": {
@@ -326,7 +335,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot the top ten prices increases and decreases via subplots"
+    "### Plot the top ten prices increases and decreases via subplots\n",
+    "\n",
+    "*Please create a code cell below to meet this task*"
    ]
   },
   {
